movie/movie.css
html{
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
}

.movie_container {
    display: flex;
    flex-direction: row;
    overflow: auto;
}

.box {
    background-color: #95999d;
    color: #000;
    width: 400px;
    height: 660px;
    border: 2px solid #000;
    border-radius: 20px;
    margin: 50px;

    display: flex;
    align-items: center;
    /* height: auto; */
}

.middle {
    display: flex;
    align-items: center;
    justify-content: center;
}

.genre {
    padding-left: 25px;
}

.sliders {
    padding-left: 40px;
}

.slider {
    width: 180px;
    padding-top: 6.6px;
    padding-bottom: 6.6px;
}

.values {
    display: inline;
    vertical-align: middle;
    padding-left: 0px;
    padding-right: 10px;
}

.value {
    display:inline-block;
    padding-top: 8.2px;
    padding-bottom: 8.3px;
}


.button {
    width: 140px;
    height: 80px;
    margin: 0 auto;
    border-radius: 15px;
    border-style:none;
    background-color: #2b2a2a;
    color: #BDBDBD;
    font-size: 18px;
    cursor: pointer;
    text-align: center;
    padding: 0px;
}

.button:active {
    transform: scale(0.95);
}  

.button:hover {
    background-color: #95999d;
    color: #070707;
}

.outputs {
    width: 400px;
}

.outbox {
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 2px;
}

.movie_name {
    width: 220px;
    padding-left: 0px;
    padding-top: 7px;
    padding-bottom: 7px;
    margin:3px;
}

.rating {
    width: 20px;
    padding-left: 40px;
    padding-bottom: 5px;
    color: rgb(109, 68, 24);
    margin: 0;
}

.align {
    width: 20px;
    padding-left: 20px;
    padding-bottom: 5px;
    color: rgb(109, 68, 24);
    margin: 0;
}


@media (max-width: 768px) {
    html {
        height:auto;
    }
    .movie_container {
        flex-direction: column;
    }
}

